# myriad

./: .gitignore  Dockerfile  Dockerfile.release  LICENSE  README.md  config.dhall  config.example.dhall  config.example.yaml  docker-compose.example.yaml  hie.yaml  hie.yaml.cbl  hie.yaml.stack  myriad.cabal  package.yaml  stack.yaml
.github/workflows/: build.yaml
app/: Main.hs
languages/apl/: run.sh
languages/bash/: run.sh
languages/brainfuck/: Dockerfile  run.sh
languages/c/: Dockerfile  run.sh
languages/clojure/: run.sh
languages/cpp/: Dockerfile  run.sh
languages/csharp/: run.sh
languages/deno/: Dockerfile  run.sh
languages/elixir/: run.sh
languages/erlang/: Dockerfile  run.sh
languages/fsharp/: run.sh
languages/go/: run.sh
languages/haskell/: Dockerfile  run.sh
languages/idris/: Dockerfile  run.sh
languages/java/: Dockerfile  run.sh
languages/javascript/: run.sh
languages/julia/: run.sh
languages/lua/: Dockerfile  run.sh
languages/nim/: Dockerfile  run.sh
languages/ocaml/: run.sh
languages/pascal/: run.sh
languages/perl/: run.sh
languages/php/: run.sh
languages/prolog/: run.sh
languages/python/: run.sh
languages/r/: Dockerfile  run.sh
languages/racket/: run.sh
languages/ruby/: run.sh
languages/rust/: run.sh
languages/typescript/: Dockerfile  run.sh
src/: Main.hs  Myriad.hs
src/Myriad/: Config.hs  Core.hs  Docker.hs  Server.hs  Util.hs
