cabal-version: 2.2

name:           myriad
version:        0.2.0.0
synopsis:       Arbitrary code execution in Docker
description:    Please see the README
category:       Server
homepage:       https://github.com/1computer1/myriad#readme
bug-reports:    https://github.com/1computer1/myriad/issues
author:         1Computer1
maintainer:     onecomputer00@gmail.com
copyright:      2019 1Computer1
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
  README.md

source-repository head
  type: git
  location: https://github.com/1computer1/myriad

common extensions
  default-extensions:
    BlockArguments
    ConstraintKinds
    DataKinds
    DerivingStrategies
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    TypeFamilies
    ViewPatterns

common deps
  build-depends:
      aeson ^>= 1.4.4.0
    , async ^>= 2.2.2
    , base ^>= 4.12.0.0
    , bytestring ^>= 0.10.8.2
    , containers ^>= 0.6.0.1
    , dhall ^>= 1.24.0
    , filepath ^>= 1.4.2.1
    , lifted-async ^>= 0.10.0.4
    , lifted-base ^>= 0.2.3.12
    , monad-control ^>= 1.0.2.3
    , monad-logger ^>= 0.3.30
    , mtl ^>= 2.2.2
    , servant ^>= 0.16.2
    , servant-server ^>= 0.16.2
    , snowflake ^>= 0.1.1.1
    , string-conversions ^>= 0.4.0.1
    , text ^>= 1.2.3.1
    , time ^>= 1.8.0.2
    , transformers ^>= 0.5.6.2
    , transformers-base ^>= 0.4.5.2
    , typed-process ^>= 0.2.6.0
    , wai ^>= 3.2.2.1
    , warp ^>= 3.2.28
  default-language: Haskell2010

library
  import: extensions, deps
  exposed-modules:
    Myriad
    Myriad.Core
    Myriad.Docker
    Myriad.Server
  hs-source-dirs: src

executable myriad
  import: extensions, deps
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      myriad
    , optparse-applicative ^>= 0.15.0.0
