cabal-version:  2.2

name:           myriad
version:        0.5.0.3
synopsis:       Arbitrary code execution in Docker.
description:    Please see the README on GitHub at <https://github.com/1Computer1/myriad#readme>
category:       Server
homepage:       https://github.com/1Computer1/myriad#readme
bug-reports:    https://github.com/1Computer1/myriad/issues
author:         1Computer
maintainer:     onecomputer00@gmail.com
copyright:      2020 1Computer
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/1Computer1/myriad

common shared
  default-language: Haskell2010
  default-extensions:
      ConstraintKinds
      DataKinds
      DeriveAnyClass
      DeriveGeneric
      DerivingStrategies
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GeneralizedNewtypeDeriving
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      OverloadedLabels
      OverloadedStrings
      PatternSynonyms
      TupleSections
      TypeApplications
      TypeFamilies
      TypeOperators
  build-depends:
      aeson
    , async
    , base >= 4.12 && < 5
    , bytestring
    , containers
    , filepath
    , lifted-async
    , lifted-base
    , monad-control
    , monad-logger
    , mtl
    , optics
    , servant >= 0.17
    , servant-server >= 0.17
    , snowflake
    , string-conversions
    , text
    , time
    , transformers
    , transformers-base
    , typed-process
    , wai
    , warp
    , yaml

library
  import: shared
  exposed-modules:
      Myriad
      Myriad.Config
      Myriad.Core
      Myriad.Docker
      Myriad.Server
  other-modules:
      Paths_myriad
  autogen-modules:
      Paths_myriad
  hs-source-dirs:
      src
  ghc-options: -Wall

executable myriad
  import: shared
  main-is: Main.hs
  other-modules:
      Paths_myriad
  autogen-modules:
      Paths_myriad
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      myriad
    , optparse-applicative
